[tool.poetry]
name = "last-layer-vercel"
version = "0.0.1"
description = "Example of running last_layer with FastAPI on vercel"
authors = ["Last Layer <gh@tangln.com>"]
maintainers = ["Last Layer <gh@tangln.com>"]
repository = "https://github.com/lastlayer/last-layer-vercel"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
last_layer = "^0.1.31"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
httpx = "^0.23.3"
pytest = "^7.2.2"
types-requests = "^2.28.11"
pre-commit = "^3.2.2"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
